<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgCancelMapDialog"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/_5sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close"
            />
        <LinearLayout
            android:id="@+id/llMapAddress"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_centerInParent="true"
            android:background="@drawable/dialog_bg"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="vertical"
            >
            <RadioGroup
                android:id="@+id/radioGroupAddLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                >

            <RadioButton
                android:id="@+id/rbOffice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_office"
                android:buttonTint="@color/colorPrimary"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"

                />

            <RadioButton
                android:id="@+id/rbHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_home"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"/>

            </RadioGroup>

            <EditText
                android:id="@+id/etHouseNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_house_no"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/text_color"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_gravity="center"
                android:gravity="start"
                android:background="@drawable/dotted_line"
                />
            <EditText
                android:id="@+id/etArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_area"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/text_color"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_gravity="center"
                android:gravity="start"
                android:background="@drawable/dotted_line"
                />

            <EditText
                android:id="@+id/etLandMark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_landmark"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/text_color"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_gravity="center"
                android:gravity="start"
                android:background="@drawable/dotted_line"
                />

            <Spinner
                android:id="@+id/spinnerState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_gravity="center"
                android:gravity="start"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/dotted_line"
                />

            <Spinner
                android:id="@+id/spinnerCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_gravity="center"
                android:gravity="start"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/dotted_line"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@color/bg"
            android:orientation="horizontal"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/tvSaveAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/blue_button"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_save_add"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>