<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/ic_background_review"
    >

    <ImageView
        android:id="@+id/imageGinee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ginee_profile"
        android:gravity="center|top"
        android:layout_gravity="center|top"
        android:paddingLeft="@dimen/_50sdp"
        android:paddingRight="@dimen/_50sdp"
        android:layout_alignParentTop="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="@drawable/login_dialog_bg"
        android:layout_below="@+id/imageGinee"
        android:layout_marginTop="-15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_below="@+id/imageView"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:padding="@dimen/_13sdp"
                android:text="@string/txt_signup"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="@drawable/dialog_bg"
                android:layout_margin="@dimen/_20sdp">
                <EditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_et_bg"
                    android:hint="@string/txt_pass"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
                <EditText
                    android:id="@+id/etConfPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_et_bg"
                    android:hint="@string/txt_conf_pass"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/text_color"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/tvDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/txt_done"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    android:background="@drawable/blue_button"/>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>