<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/ic_background_review"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="?attr/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_above="@id/imageGinee">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:padding="@dimen/_13sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageGinee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ginee_profile"
        android:gravity="center|top"
        android:layout_gravity="center|top"
        android:paddingLeft="@dimen/_50sdp"
        android:paddingRight="@dimen/_50sdp"
        android:layout_alignParentTop="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="@drawable/login_dialog_bg"
        android:layout_below="@+id/imageGinee"
        android:layout_marginTop="-15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_below="@+id/imageView"
            >
            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:padding="@dimen/_13sdp"
                android:text="@string/txt_reset_pass"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="@drawable/dialog_bg"
                android:layout_margin="@dimen/_20sdp">

                <EditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_et_bg"
                    android:hint="@string/txt_pass"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_gravity="center"
                    android:gravity="center"

                    />

                <EditText
                    android:id="@+id/etOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_et_bg"
                    android:hint="@string/txt_otp_verify"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/text_color"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/tvResetPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/txt_reset_pass"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    android:background="@drawable/blue_button"
                    android:layout_marginBottom="@dimen/_20sdp"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>